<resources>

    <string name="app_name">Cadueus</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Provider Medical Search</string>
    <string name="codeCamp">Project Base Code Camp</string>
    <string name="hello_world">Mobile Provider Search</string>
    <string name="Favorites">This is Favorites</string>
    <string name="Information">Here is some information</string>
    <string name="Search">Perform a search</string>
    <string name="specialtyHint">Select Specialty</string>
    <string name="cityHint">Select City</string>
    <string name="nameHint">Enter Last Name</string>
    <string name="SearchButtonText">Search</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="ResultsMessage">Here is the results</string>
    <string name="ImageDescription">Application Logo</string>
    <string name="title_activity_directions">DirectionsActivity</string>
    <string name="information_html">
		<![CDATA[
		<h2>Development Environment</h2>
		<p>
			This mobile application was created using Eclipse Juno. The project was setup with Android 2.3.3 goole API.
			In order to create this you will need the follow:
		</p>
		<div> - Java JDK</div>
		<div> - Eclipse Juno</div>
		<div> - Android plugin for Eclipse</div>

		]]>
	</string>
    

</resources>